# ucar

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASK.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 14281fcbf0a1_auto_generated_migration.py  1d4e67ec95ef_auto_generated_migration.py
app/: main.py
app/api/v1/: base_router.py  incident.py
app/core/: async_logger.py  config.py  enums.py  structlog_configure.py
app/crud/: base.py  incident.py
app/crud/mixins/: query_mixin.py  types.py
app/db/: asyncpg_pool.py  session.py
app/dependencies/: get_db.py
app/exceptions/: base.py
app/middleware/: middleware_log.py
app/models/: base.py  incident.py
app/schemas/: incident.py
app/services/: incident.py
app/utils/: generate_incidents.py  tree.py
postgres_config/: postgresql.conf  postgresql1.conf  postgresql2.conf
