[project]
name = "ucar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.1",
    "granian>=2.5.7",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.11.0",
    "pylint>=4.0.2",
    "requests>=2.32.5",
    "ruff>=0.14.4",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
]
