[project]
name = "ucar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.2",
    "granian[uvloop]>=2.6.0",
    "itsdangerous>=2.2.0",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pylint>=4.0.3",
    "ruff>=0.14.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "structlog>=25.5.0",
]
